[project]
name = "llmjq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "typer>=0.15.1",
]

[project.scripts]
llmjq = "llmjq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
